# HW12

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LogregClassifier.h  Makefile  README.md  cmake_install.cmake  fashio_mnist  helpers.h  main.cpp  tests.cpp
.github/workflows/: release.yml
html/: LogregClassifier_8h_source.html  annotated.html  classLogregClassifier-members.html  classLogregClassifier.html  classes.html  files.html  helpers_8h_source.html  md_README.html  pages.html
html/search/: all_2.js  all_3.js  classes_0.js  classes_2.js  pages_0.js  searchdata.js
latex/: annotated.tex  classLogregClassifier.tex  md_README.tex  refman.tex
